# Desafio-STF

./: .gitignore  Dockerfile  README.md  desafio-ds 1.md  pyproject.toml  test_api.py
.github/workflows/: ci.yml
app/: main.py
app/modelling/: __init__.py  model_selection.py  predict.py  train.py
app/text_processing/: __init__.py  cleaner.py  cleaner_batch.py  text_processing.py
models/: best_model_config.json  model.pkl  multilabel_binarizer.pkl  tfidf_vectorizer.pkl
notebooks/: ExplorandoDados.ipynb  SimpleTraining.ipynb  TestAPI.ipynb  Tests.ipynb
tests/: test_api.py  test_async.py  test_model_selection.py  test_text_processing.py  test_train.py
tests/sample_data/: sample_data.parquet
