[project]
name = "desafio-stf"
version = "0.1.0"
description = "API para classificar textos jurídicos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
]
