[project]
name = "desafio-stf"
version = "0.1.0"
description = "API para classificar textos jurídicos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "nltk>=3.9.1",
    "pt-core-news-sm",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "black>=25.1.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "isort>=6.0.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
pt-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pt_core_news_sm-3.8.0/pt_core_news_sm-3.8.0-py3-none-any.whl" }

[tool.isort]
profile = "black"
